--- a/melody/styles/style.css
+++ b/melody/styles/style.css
@@ -1,24 +1,28 @@
-*{
-  box-sizing: border-box;
+* {
+  /* box-sizing: border-box; */
 }
+
 @font-face {
   font-family: "Bebas Neue";
   src: local("BebasNeueRegular"),
-  url("BebasNeueRegular/BebasNeueRegular.woff2") format("woff2"),
-  url("BebasNeueRegular/BebasNeueRegular.woff") format("woff");
+    url("BebasNeueRegular/BebasNeueRegular.woff2") format("woff2"),
+    url("BebasNeueRegular/BebasNeueRegular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
-body{
+
+body {
   font-family: "Roboto", sans-serif;
 }
+
 .header {
   background-color: #635854;
   padding-top: 12px;
   padding-bottom: 12px;
   border-bottom: 4px solid #3596F5;
 }
+
 .navbar {
   max-width: 1280px;
   margin: auto;
@@ -27,7 +31,8 @@ body{
   align-items: center;
 
 }
-.navbar-menu{
+
+.navbar-menu {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -35,45 +40,61 @@ body{
   text-align: center;
 
 }
-.navbar-item{
+
+.navbar-item {
   margin-left: 40px;
   margin-right: 40px;
 }
-.navbar-link{
+
+.navbar-link {
   text-decoration: none;
-  color:#fff;
+  color: #fff;
 }
+
 .navbar-text {
   display: block;
-  color:#fff;
+  color: #fff;
   margin-bottom: 4px;
   font-size: 14px;
 
 }
-.navbar-contacts{
+
+.navbar-contacts {
   text-align: right;
 }
-.navbar-phone{
-  color:#fff;
+
+.navbar-phone {
+  color: #fff;
   font-weight: 700;
   font-size: 17px;
   line-height: 20px;
   text-decoration: none;
 }
+
 .main {
-    max-width: 1280px;
-    margin: auto;
-    padding-top: 54px;
-    padding-bottom: 54px;
-    display: flex;
-}
-.main-info{
-  flex-grow: 1;
-  text-align: center;
+  max-width: 1280px;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.main-image {
+  padding: 5% 0;
+  width: 100vw;
+}
+
+.home-image {
+  width: 100vw;
+}
+
+.main-info {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  flex-direction: column;
   justify-content: space-between;
+  padding-bottom: 10%;
+  min-height: 350px;
 }
 
 .home-image path {
@@ -84,10 +105,15 @@ body{
   opacity: 1;
   cursor: pointer;
 }
+
+path.current-floor {
+  opacity: 1;
+}
+
 .counter-group {
   display: flex;
   flex-direction: column;
-  align-items:center;
+  align-items: center;
 }
 
 .main-title {
@@ -98,23 +124,27 @@ body{
   color: #635854;
   margin: 0;
 }
+
 .counter {
   font-family: 'Bebas Neue', sans-serif;
   color: #635854;
   font-size: 124px;
   margin-top: 10px;
 
-} 
+}
+
 button {
   border: none;
 }
+
 .button-primary {
   background: #3596F5;
   border-radius: 6px;
-  color:#fff;
+  color: #fff;
   padding: 16px 36px;
   cursor: pointer;
 }
+
 .counter-button {
   background: #fff;
   cursor: pointer;
