--- a/melody/styles/style.css
+++ b/melody/styles/style.css
@@ -94,7 +94,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   padding-bottom: 10%;
-  min-height: 400px;
+  min-height: 500px;
 }
 
 .home-image path {
@@ -115,7 +115,6 @@ path.current-floor {
   flex-direction: column;
   align-items: center;
   padding: 7% 0;
-
 }
 
 .main-title {
@@ -132,7 +131,6 @@ path.current-floor {
   color: #635854;
   font-size: 124px;
   margin-top: 10px;
-
 }
 
 button {
@@ -143,12 +141,13 @@ button {
   background: #3596F5;
   border-radius: 6px;
   color: #fff;
-  padding: 16px 36px;
+  padding: 16px 26px;
   cursor: pointer;
+  font-size: 1.5em;
 }
 
 .counter-button {
   background: #fff;
   cursor: pointer;
-
+  padding: 10% 0;
 }
