--- a/melody/styles/style.css
+++ b/melody/styles/style.css
@@ -104,10 +104,12 @@ body {
 
 .home-image path:hover {
   opacity: 1;
+  cursor: pointer;
 }
 
 path.current-floor {
   opacity: 1;
+  cursor: pointer;
 }
 
 .counter-group {
