--- a/melody/styles/style.css
+++ b/melody/styles/style.css
@@ -94,7 +94,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   padding-bottom: 10%;
-  min-height: 500px;
+  min-height: 600px;
 }
 
 .home-image path {
@@ -132,7 +132,7 @@ path.current-floor {
   font-family: 'Bebas Neue', sans-serif;
   color: #635854;
   font-size: 124px;
-  margin-top: 10px;
+  margin: 30%;
 }
 
 button {
@@ -151,5 +151,4 @@ button {
 .counter-button {
   background: #fff;
   cursor: pointer;
-  padding: 10% 0;
 }
