--- a/brighton-times/responsive.css
+++ b/brighton-times/responsive.css
@@ -24,26 +24,6 @@ body {
     width: 0;
   }
 
-@media screen and (max-width: 700px) {
-  .header__logo {
-    height: 3.2em;
-  }
-
-  h1.header__title {
-    font-size: 3em;
-  }
-}
-
-@media screen and (max-width: 400px) {
- 
-  h1.header__title {
-    font-size: 1.7em;
-  }
-
-  .hero article {
-    height: 45%;
-  }
-}
 
 @media screen and (max-width: 500px) {
   a#menu svg {
@@ -103,6 +83,7 @@ body {
   }
 }
 
+
 @media screen and (min-width: 300px) {
   .hero {
     order: 0;
@@ -122,6 +103,41 @@ body {
   .weather {
     order: 3;
     width: 100%;
+  }
+   h1.header__title {
+    font-size: 1.6em;
+  }
+   .hero article {
+    height: 50%;
+  }
+}
+
+@media screen and (min-width: 400px) {
+ 
+  h1.header__title {
+    font-size: 2em;
+  }
+
+  .hero article {
+    height: 45%;
+  }
+}
+
+@media screen and (min-width: 500px) {
+ 
+  h1.header__title {
+    font-size: 2.2em;
+  }
+
+}
+
+@media screen and (min-width: 700px) {
+  .header__logo {
+    height: 3.2em;
+  }
+
+  h1.header__title {
+    font-size: 3em;
   }
 }
 
